# vessl-model-training-kit-lucas

./: .gitignore  README.md  env.tmpl  eval_script.sh  evaluate_llm.py  gkd-sample.py  prune_conservative.py  quantize.py  requirements.txt  settings.py  sft_hf_think_configurable.py  test.ipynb  translate.py  upload.ipynb
SFT_data_gen/: requirements.txt
SFT_data_gen/scripts/: deploy_server.sh  quick_test.py  run_generation.sh  test_batch_mode.py  test_setup.py
SFT_data_gen/src/: batch_generator.py  chunker.py  dedup.py  fix_jsonl_types.py  generator.py  patch_openai_ascii.py  postprocess.py  prompt_builder.py  prompt_cache.py  token_tracker.py  utils.py
SFT_data_gen/templates/: mtbench_batch_instructions.j2  thaiexam_batch_instructions.j2
assets/: eval_prompt.jinja2
dataset/: _deprecated_thaiexam.py  arc.py  dataset.py  gptteacher_thai.py  prompt_template.py  r1distillsft_thai.py  thaiexam.py  utils.py  xlsum.py
evaluators/: __init__.py  arc.py  base.py  metric_utils.py  mtbench.py  openai_run.py  thaiexam.py  xlsum.py
model/: api_model.py  dto.py  llama_model.py  model.py
translation_scripts/: README.md  README_TRANSLATION_SCRIPTS.md  README_thaiexam.md  requirements.txt  run_thaiexam_translation.sh  run_translation.sh  setup_config.py  translate_mtbench_dataset.py  translate_thaiexam_dataset.py
utils/: is_api.py  path.py
vessl_vllm/: README.md  pyproject.toml
vessl_vllm/tmai_thai/: configuration_solar_moe.py  solar_moe.py  vllm_setup.py  vllm_solar_moe.py
vessl_vllm/tmai_thai/.ipynb_checkpoints/: solar_moe-checkpoint.py
(+22 files in other folders)
